Fixed stretched images in /album previews

--- a/public/styles/site/partials/_preview.scss
+++ b/public/styles/site/partials/_preview.scss
@@ -19,8 +19,9 @@
       position: absolute;
       margin: 0 50%;
       transform: translate(-50%, 0);
+      object-fit: cover;
       height: 100%;
-      min-width: 100%;
+      width: 100%;
       vertical-align: top;
     }
     .overlay {
